@@ -1,3 +1,5 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: ????
+  Changes:
+    - [item=recipe-combinator-main] Move to circuit-combinator subgroup if SchallCircuitGroup is installed.
